--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 .event-details{
     background-color: black;
     padding: 3rem;
-    border-radius: 10%;
+    border-radius: 3rem;
 }
 
 #supporters-list{
